# urshifu

./: README.md  mkdata.ipynb  mkdata.py  mkdata_2.ipynb  mkprediction.py  pokem.py  pokepoke.py  pyproject.toml  test.ipynb  urshifu_optuna.ipynb
data/: aku.csv  aku_1.csv  m_urshifu.csv  mizu.csv  mizu_1.csv  move_info.csv  poke_info.csv  urshifu_pt.csv
models/: optunalgbm.txt
tests/: test_urshifu.py
