[tool.poetry]
name = "urshifu"
version = "0.1.0"
description = ""
authors = ["Empoleon-395 <taka.yu9000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.0"
optuna = "^2.10.0"
numpy = "^1.22.1"
ipykernel = "^6.7.0"
scikit-learn = "^1.0.2"
lightgbm = "^3.3.2"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
